--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,27 @@ jobs:
   build:
     name: test
     runs-on: ubuntu-latest
+
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres:12
+        # Provide the password for postgres
+        env:
+          POSTGRES_USER: varel
+          POSTGRES_PASSWORD: newpassword237
+          POSTGRES_DB: super_bank
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
+
     steps:
     - uses: actions/checkout@v4
 
@@ -18,6 +39,9 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
+    
+    - name: Run migrations
+      uses: make migrateup
 
     - name: Test
       run: make test
