--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,7 +41,7 @@ jobs:
         go-version: '1.20'
     
     - name: Run migrations
-      uses: make migrateup
+      run: make migrateup
 
     - name: Test
       run: make test
