--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,7 @@ jobs:
       run: |
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.1/migrate.linux-amd64.tar.gz | tar xvz
         ls
-        sudo mv migrate.linux-amd64-* /usr/bin/migrate
+        sudo mv migrate /usr/bin/migrate
 
     - name: Set up Go
       uses: actions/setup-go@v4
